--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
 HOST=127.0.0.1
 PORT=3333
+
 NODE_ENV=development
 
-APP_NAME=AdonisJs
+APP_NAME=Delivery
 APP_URL=http://${HOST}:${PORT}
 
 CACHE_VIEWS=false
 
 APP_KEY=
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
-DB_DATABASE=adonis
-
+DB_PASSWORD=1akseui12sd8kS*$%212
+DB_DATABASE=delivery
 HASH_DRIVER=bcrypt
